APB-384 reads only hexvalues used as icons and declares font from Fontawesome module and icon class in css, removes loading complete Fontawesome css, fixes icons app_align_right wrong character and app_log syntax error, fixes css selector for icons in menu 8 and font height in menu 10 in admin app, fixes stat row 2 width css in app2 and stat row 1 width in common css, fixes icon sizes app2 settings image

--- a/apps/admin/src/secure/admin.css
+++ b/apps/admin/src/secure/admin.css
@@ -561,11 +561,11 @@
         display: inline-block;
         font-size: 9px;
     }
-    #menu_8_db_info1 div:nth-child(odd){
+    #menu_8_db_info1>div:nth-child(odd){
         width: 150px;
         text-transform: uppercase;
     }
-    #menu_8_db_info1 div:nth-child(even){
+    #menu_8_db_info1>div:nth-child(even){
         width: calc(100% - 150px);
     }
 
@@ -610,6 +610,9 @@
         text-align: start;
     }
     /*MENU SERVER*/
+    #menu_10_content{
+        line-height: 110%;
+    }
     #menu_10_content_widget1{
         height:300px;
     }
